# ask-hermes

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: workspace-spec.md
public/: speaches-pcm-worklet.js
scripts/: smoke-startup.ps1
src/: App.tsx  WorkspaceApp.test.tsx  WorkspaceApp.tsx  autostart.test.ts  autostart.ts  captures.test.ts  captures.ts  conversation.test.ts  conversation.ts  hermes-gateway.test.ts  hermes-gateway.ts  hermes-instance.test.ts  hermes-instance.ts  index.tsx  instances.test.ts  instances.ts  markdown.test.ts  markdown.ts  model-settings.test.ts  model-settings.ts  previous-chat.test.ts  previous-chat.ts  selection.test.ts  selection.ts  session-shortcuts.test.ts  session-shortcuts.ts  sessions.test.ts  sessions.ts  speaches-realtime.test.ts  speaches-realtime.ts  styles.css  turn-activity.test.ts  turn-activity.ts  voice-input.test.ts  voice-input.ts  workspace.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  workspace.rs
src/workspace/: commands.test.ts  commands.ts  gateway-files.test.ts  gateway-files.ts  handoff.test.ts  handoff.ts  notifications.test.ts  notifications.ts  persistence.test.ts  persistence.ts  search.test.ts  search.ts  state.test.ts  state.ts  strings.ts  types.ts
